# Project_ExamPlan

./: .gitignore  CMakeLists.txt  README.md
OutputData/: Geplante_Prüfungen.csv  Studenten_Übersicht.csv  Ungeplante_Prüfungen.csv
header/: CSVParser.h  CSVWriter.h  ExamParser.h  RoomParser.h  StudentParser.h  Time.h
src/: CSVParser.cpp  CSVWriter.cpp  ExamParser.cpp  RoomParser.cpp  StudentParser.cpp  Time.cpp  main.cpp
